Fix spacing issue on site

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3201,3 +3201,8 @@ svg{
 			}
 
 	}
+
+
+	#substrings-pic{
+		padding-top: 36px;
+	}
